--- a/main.html
+++ b/main.html
@@ -8,4 +8,21 @@ I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Log
 as well as the <a href="https://cs.au.dk/research/centers/cpv/">Center for Basic Research in Program Verification</a>.
 My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
  <p>I work on <a href="https://iris-project.org/">formal verification</a> of distributed systems. I'm also interested in programming language design, type theory,
-program analysis, and compilers.</p></section></article></body></html>
+program analysis, and compilers.</p></section>
+<section><h2>Publications</h2>
+<h3>peer-reviewed</h3>
+<ol><li><b>Blame for Null</b>
+<br />
+Abel Nieto, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
+<br />
+<small><span style="color:gray">To appear at ECOOP 2020</span></small></li>
+<li><b>Scala with Explicit Nulls</b>
+<br />
+Abel Nieto, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
+<br />
+<small><span style="color:gray">To appear at ECOOP 2020</span></small></li>
+<li><b>Towards Algorithmic Typing for DOT (Short Paper)</b>
+<br />
+Abel Nieto
+<br />
+<small><span style="color:gray">Scala Symposium 2017</span></small></li></ol></section></article></body></html>
