Add helper functions

--- a/main.html
+++ b/main.html
@@ -13,16 +13,18 @@ program analysis, and compilers.</p></section>
 <h3>peer-reviewed</h3>
 <ol><li><b>Blame for Null</b>
 <br />
-Abel Nieto, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
+<em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
 <small><span style="color:gray">To appear at ECOOP 2020</span></small></li>
 <li><b>Scala with Explicit Nulls</b>
 <br />
-Abel Nieto, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
+<em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
 <small><span style="color:gray">To appear at ECOOP 2020</span></small></li>
 <li><b>Towards Algorithmic Typing for DOT (Short Paper)</b>
 <br />
-Abel Nieto
+<em>Abel Nieto</em>
 <br />
-<small><span style="color:gray">Scala Symposium 2017</span></small></li></ol></section></article></body></html>
+<small><span style="color:gray">Scala Symposium 2017</span></small></li></ol></section>
+  <h3>technical reports</h3>
+  <h3>thesis</h3></article></body></html>
