--- a/main.html
+++ b/main.html
@@ -15,16 +15,19 @@ program analysis, and compilers.</p></section>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
-<small><span style="color:gray">To appear at ECOOP 2020</span></small></li>
+<small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
 <li><b>Scala with Explicit Nulls</b>
 <br />
 <em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
-<small><span style="color:gray">To appear at ECOOP 2020</span></small></li>
+<small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
 <li><b>Towards Algorithmic Typing for DOT (Short Paper)</b>
 <br />
 <em>Abel Nieto</em>
 <br />
 <small><span style="color:gray">Scala Symposium 2017</span></small></li></ol></section>
   <h3>technical reports</h3>
+  <ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b>
+<br />
+<em>Abel Nieto</em></li></ol>
   <h3>thesis</h3></article></body></html>
