--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
 program analysis, and compilers.</p></section>
 <section><h2>Publications</h2>
 <h3>peer-reviewed</h3>
-<ol><li><b>Blame for Null</b> <span></span>
+<ol><li><b>Blame for Null</b> <span>|<a style="color:blue" href="https://github.com/abeln/null-calculus">code</a></span>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
 <small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
-<li><b>Scala with Explicit Nulls</b> <span></span>
+<li><b>Scala with Explicit Nulls</b> <span>|<a style="color:blue" href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
 <br />
 <em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
