--- a/index.html
+++ b/index.html
@@ -40,4 +40,4 @@ program analysis, and compilers.</p></section>
   <h3>thesis</h3>
   <ol><li><b>Scala with Explicit Nulls</b> <span>|<a style="color:blue" href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
 <br />
-<small><span style="color:gray">MMath, University of Waterloo, 2019</span></small></li></ol></article></body></html>
+<small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></article></body></html>
