start free theorem

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 
-<html lang="en"><head><link rel="stylesheet" href="tufte.css" /></head>
+<html lang="en"><head><link rel="stylesheet" href="tufte.css" />
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body><article><h1>Abel Nieto</h1>
 <section><p>Hello! My name is Abel, and I’m a PhD student at Aarhus University, where
 I'm a member of the <a href="https://cs.au.dk/research/logic-and-semantics/">Logic and Semantics</a> group,
@@ -25,9 +27,9 @@ program analysis, and compilers.</p></section>
 <br />
 <em>Abel Nieto</em>
 <br />
-<small><span style="color:gray">Scala Symposium 2017</span></small></li></ol></section>
-  <h3>technical reports</h3>
-  <ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b> <span>|<a style="color:blue" href="https://arxiv.org/pdf/1801.02571.pdf">.pdf</a></span>
+<small><span style="color:gray">Scala Symposium 2017</span></small></li></ol>
+<h3>technical reports</h3>
+<ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b> <span>|<a style="color:blue" href="https://arxiv.org/pdf/1801.02571.pdf">.pdf</a></span>
 <br />
 <em>Abel Nieto</em>
 <br />
@@ -37,7 +39,9 @@ program analysis, and compilers.</p></section>
 <em>Abel Nieto</em>
 <br />
 <small><span style="color:gray">2017</span></small></li></ol>
-  <h3>thesis</h3>
-  <ol><li><b>Scala with Explicit Nulls</b> <span>|<a style="color:blue" href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
+<h3>thesis</h3>
+<ol><li><b>Scala with Explicit Nulls</b> <span>|<a style="color:blue" href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
 <br />
-<small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></article></body></html>
+<small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
+<section><h2>Scribbles</h2>
+<ul><li><a href="scribbles/free-theorem.html">a free theorem</a></li></ul></section></article></body></html>
