switch to italics

--- a/scribbles/free-theorem.html
+++ b/scribbles/free-theorem.html
@@ -2,7 +2,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body><article><p>The following <a href="https://en.wikipedia.org/wiki/Parametricity">free theorem</a> appears as an exercise in Lau Skorstengaard's
-<a href="https://arxiv.org/pdf/1907.11133.pdf">&quot;An Introduction to Logical Relations&quot;</a>.</p>
+<a href="https://arxiv.org/pdf/1907.11133.pdf"><i>An Introduction to Logical Relations</i></a>.</p>
 <p><b>Theorem.</b> If \(\cdot; \cdot \vdash e : \forall \alpha. ((\tau \rightarrow \alpha) \rightarrow \alpha)\) and
 \( \cdot; \cdot \vdash k : \tau \rightarrow \tau_k \), then \( \cdot; \cdot \vdash e[\tau_k] k \approx k (e[\tau] \lambda x: \tau.x) : \tau_k \).</p>
 <p> <b>Proof.</b> From \(\cdot; \cdot \vdash e : \forall \alpha. ((\tau \rightarrow \alpha) \rightarrow \alpha)\) we get
