add dates to scribbles

--- a/index.html
+++ b/index.html
@@ -44,4 +44,4 @@ program analysis, and compilers.</p></section>
 <br />
 <small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
 <section><h2>Scribbles</h2>
-<ul><li><a href="scribbles/free-theorem.html">a free theorem</a></li></ul></section></article></body></html>
+<ul><li><a href="scribbles/free-theorem.html">a free theorem</a> <small><span style="color:gray">(08/25/20)</span></small></li></ul></section></article></body></html>
