--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@ My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
 program analysis, and compilers.</p></section>
 <section><h2>Publications</h2>
 <h3>peer-reviewed</h3>
-<ol><li><b>Blame for Null</b> <span>|<a style="color:blue" href="https://github.com/abeln/null-calculus">code</a></span>
+<ol><li><b>Blame for Null</b> <span>|<a href="https://github.com/abeln/null-calculus">code</a></span>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
 <small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
-<li><b>Scala with Explicit Nulls</b> <span>|<a style="color:blue" href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
+<li><b>Scala with Explicit Nulls</b> <span>|<a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
 <br />
 <em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
 <small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
-<li><b>Towards Algorithmic Typing for DOT (Short Paper)</b> <span>|<a style="color:blue" href="https://cs.uwaterloo.ca/~anietoro/algo-dot.pdf">.pdf</a>, <a style="color:blue" href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span>
+<li><b>Towards Algorithmic Typing for DOT (Short Paper)</b> <span>|<a href="https://cs.uwaterloo.ca/~anietoro/algo-dot.pdf">.pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span>
 <br />
 <em>Abel Nieto</em>
 <br />
 <small><span style="color:gray">Scala Symposium 2017</span></small></li></ol>
 <h3>technical reports</h3>
-<ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b> <span>|<a style="color:blue" href="https://arxiv.org/pdf/1801.02571.pdf">.pdf</a></span>
+<ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b> <span>|<a href="https://arxiv.org/pdf/1801.02571.pdf">.pdf</a></span>
 <br />
 <em>Abel Nieto</em>
 <br />
 <small><span style="color:gray">2018</span></small></li>
-<li><b>Towards Algorithmic Typing for DOT</b> <span>|<a style="color:blue" href="https://arxiv.org/abs/1708.05437">.pdf</a></span>
+<li><b>Towards Algorithmic Typing for DOT</b> <span>|<a href="https://arxiv.org/abs/1708.05437">.pdf</a></span>
 <br />
 <em>Abel Nieto</em>
 <br />
 <small><span style="color:gray">2017</span></small></li></ol>
 <h3>thesis</h3>
-<ol><li><b>Scala with Explicit Nulls</b> <span>|<a style="color:blue" href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
+<ol><li><b>Scala with Explicit Nulls</b> <span>|<a href="https://uwspace.uwaterloo.ca/handle/10012/15364">.pdf</a></span>
 <br />
 <small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
 <section><h2>Scribbles</h2>
