Add local copies of papers

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@ My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
 program analysis, and compilers.</p></section>
 <section><h2>Publications</h2>
 <h3>peer-reviewed</h3>
-<ol><li><b>Blame for Null</b> <span>|<a href="https://github.com/abeln/null-calculus">code</a></span>
+<ol><li><b>Blame for Null</b> <span>|<a href="papers/blame-for-null.pdf">.pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
 <small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
-<li><b>Scala with Explicit Nulls</b> <span>|<a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
+<li><b>Scala with Explicit Nulls</b> <span>|<a href="papers/scala-explicit-nulls.pdf">.pdf</a>, <a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
 <br />
 <em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
 <small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
-<li><b>Towards Algorithmic Typing for DOT (Short Paper)</b> <span>|<a href="https://cs.uwaterloo.ca/~anietoro/algo-dot.pdf">.pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span>
+<li><b>Towards Algorithmic Typing for DOT (Short Paper)</b> <span>|<a href="papers/algo-dot.pdf">.pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span>
 <br />
 <em>Abel Nieto</em>
 <br />
