--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
 program analysis, and compilers.</p></section>
 <section><h2>Publications</h2>
 <h3>peer-reviewed</h3>
-<ol><li><b>Blame for Null</b> <span>|<a href="papers/blame-for-null.pdf">.pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span>
+<ol><li><b>Distributed Causal Memory: Modular Specification andVerification in Higher-Order Distributed Separation Logic</b> <span>|<a href="papers/2021-ccddb.pdf">.pdf</a></span>
+<br />
+Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, Lars Birkedal
+<br />
+<small><span style="color:gray">Conditionally Accepted to POPL 2021</span></small></li>
+<li><b>Blame for Null</b> <span>|<a href="papers/blame-for-null.pdf">.pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
