--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@ My advisor is <a href="https://cs.au.dk/~birke/">Lars Birkedal</a>.</p>
 program analysis, and compilers.</p></section>
 <section><h2>Publications</h2>
 <h3>peer-reviewed</h3>
-<ol><li><b>Distributed Causal Memory: Modular Specification andVerification in Higher-Order Distributed Separation Logic</b> <span>|<a href="papers/2021-ccddb.pdf">.pdf</a></span>
+<ol><li><b>Distributed Causal Memory: Modular Specification and Verification in Higher-Order Distributed Separation Logic</b> <span>|<a href="papers/ccdb-final.pdf">.pdf</a></span>
 <br />
 Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, Lars Birkedal
 <br />
-<small><span style="color:gray">Conditionally Accepted to POPL 2021</span></small></li>
-<li><b>Blame for Null</b> <span>|<a href="papers/blame-for-null.pdf">.pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span>
+<small><span style="color:gray">POPL 2021</span></small></li>
+<li><b>Blame for Null</b> <span>|<a href="papers/blame-final.pdf">.pdf</a>, <a href="https://github.com/abeln/null-calculus">code</a></span>
 <br />
 <em>Abel Nieto</em>, Marianna Rapoport, Gregor Richards, Ondřej Lhoták
 <br />
-<small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
-<li><b>Scala with Explicit Nulls</b> <span>|<a href="papers/scala-explicit-nulls.pdf">.pdf</a>, <a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
+<small><span style="color:gray">ECOOP 2020</span></small></li>
+<li><b>Scala with Explicit Nulls</b> <span>|<a href="papers/explicit-nulls-final.pdf">.pdf</a>, <a href="https://github.com/abeln/dotty/tree/dotty-explicit-nulls-evaluation">code</a></span>
 <br />
 <em>Abel Nieto</em>, Yaoyu Zhao, Ondřej Lhoták, Angela Chang, Justin Pu
 <br />
-<small><span style="color:gray">To appear in ECOOP 2020</span></small></li>
+<small><span style="color:gray">ECOOP 2020</span></small></li>
 <li><b>Towards Algorithmic Typing for DOT (Short Paper)</b> <span>|<a href="papers/algo-dot.pdf">.pdf</a>, <a href="https://www.youtube.com/watch?v=uokvc1Do_nM">talk</a></span>
 <br />
 <em>Abel Nieto</em>
 <br />
-<small><span style="color:gray">Scala Symposium 2017</span></small></li></ol>
+<small><span style="color:gray">Scala 2017</span></small></li></ol>
 <h3>technical reports</h3>
 <ol><li><b>Tamarin: Concolic Disequivalence for MIPS</b> <span>|<a href="https://arxiv.org/pdf/1801.02571.pdf">.pdf</a></span>
 <br />
