Start simulation post

--- a/index.html
+++ b/index.html
@@ -49,4 +49,5 @@ Léon Gondelman, Simon Oddershede Gregersen, <em>Abel Nieto</em>, Amin Timany, L
 <br />
 <small><span style="color:gray">master thesis, University of Waterloo, 2019</span></small></li></ol></section>
 <section><h2>Scribbles</h2>
-<ul><li><a href="scribbles/free-theorem.html">a free theorem</a> <small><span style="color:gray">(08/25/20)</span></small></li></ul></section></article></body></html>
+<ul><li><a href="scribbles/free-theorem.html">a free theorem</a> <small><span style="color:gray">(08/25/20)</span></small></li>
+<li><a href="scribbles/quantifiers.html">commuting quantifiers: an example</a> <small><span style="color:gray">(03/10/21)</span></small></li></ul></section></article></body></html>
