add source code

--- a/scribbles/quantifiers.html
+++ b/scribbles/quantifiers.html
@@ -1,19 +1,19 @@
 <html lang="en"><head><link rel="stylesheet" href="../tufte.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
-<body><article> <section><p><span class="newthought">This note</span> defines a notion of <i>similarity</i> for <i>labelled-transition systems</i> (LTS) and shows how, by placing certain finiteness conditions
+<body><article><section><p><span class="newthought">This note</span> defines a notion of <i>similarity</i> for <i>labelled-transition systems</i> (LTS) and shows how, by placing certain finiteness conditions
 on the LTS, similarity can be iteratively computed. In the process, we will see how similarity can be a concrete example of the trick for &quot;commuting quantifiers&quot; described in
 <a href="https://tildeweb.au.dk/au571806/blog/commuting_quantifiers/">Amin Timany's blog</a>. None of what follows is novel, and is sourced from Davide Sangiorgi's excellent
 <a href="https://www.cambridge.org/core/books/introduction-to-bisimulation-and-coinduction/8B54001CB763BAE9C4BA602C0A341D60">introduction to coinduction and
 bisimulation</a>.</p></section>
- <section><p><span class="newthought">A labelled-transition system</span> is a triple \((Pr, Act, \rightarrow)\), where \(Pr\) is the set of <i>processes</i> (states), \(Act\) is a set of
+<section><p><span class="newthought">A labelled-transition system</span> is a triple \((Pr, Act, \rightarrow)\), where \(Pr\) is the set of <i>processes</i> (states), \(Act\) is a set of
 <i>actions</i> (labels), and \( \rightarrow \subseteq Pr \times Act \times Pr \) is the <i>transition relation</i>. We will write
 \( P \rightarrow_{\mu} Q \) for \( (P, \mu, Q) \).</p>
 <p>A <i>simulation</i> is a relation \( R \subseteq Pr \times Pr \) such that if \( (P, Q) \in R \), then for all \( P' \) such that \( P \rightarrow_{\mu} P'  \), there exists a \( Q' \) such that
 \( Q \rightarrow_{\mu} Q' \) and \( (P', Q') \in R \).</p>
 <p><i>Similarity</i>, denoted by \( \le \), is the union of all simulations.
- When \( P \le Q \) we say that \( Q \) <i>simulates</i> \( P \) (note the order is reversed).
-For example, the following LTS models a <a href="https://en.wikipedia.org/wiki/Two-phase_commit_protocol">two-phase commit</a> protocol with two clients,
+When \( P \le Q \) we say that \( Q \) <i>simulates</i> \( P \) (note the order is reversed).
+For example, the following LTS models a <a href="https://en.wikipedia.org/wiki/Two-phase_commit_protocol">two-phase commit</a> (2PC) protocol with two clients,
 while keeping track of which clients have committed (C) or aborted (A). The transitions are unlabelled because we have only one action (e.g. \( \mu \)):</p>
 <img src="2pc.png" style="height:300px" />
 <p>If we want to model the protocol at a higher level, we can decide to not keep track of the client state:</p>
@@ -33,7 +33,32 @@ For example, the sequence \( [Init, C_1, A_2, Abort] \) is simulated by \( [Init
 <ul><li>\( \le_0 = Pr \times Pr \)</li>
 <li> \( \le_{n + 1} = F(\le_n) \)</li></ul></p>
 <p>To compute similarity, we'd like to know that \( P \le Q \) iff  \( P \le_n Q \) <i>for all n</i>; i.e.
-  $$ \le = \bigcap_{i \ge 0} \le_i $$
+$$ \le = \bigcap_{i \ge 0} \le_i $$
 If so, we could compute \( \le_0, \le_1, \ldots, \le_n, \ldots \)
-Since \( F \) is monotone, if at any point we reach a fixpoint \( \le_n = F(\le_{n}) = \le_{n + 1} \), then we know that
-$$  \bigcap_{i \ge 0} \le_i = \le_n $$</p></section></article></body></html>
+Since \( F \) is monotone, then we can stop computing as soon as we reach a fixpoint \( \le_n = F(\le_{n}) = \le_{n + 1} \). In that case
+$$  \le = \bigcap_{i \ge 0} \le_i = \le_n $$
+The iteration-until-fixpoint algorithm can be implemented more or less verbatim (<a href="simil-src.html">Scala source</a>).
+For the 2PC models above, we indeed get that \( Init \le Init' \) as expected.
+<label for="sn-sim" class="margin-toggle sidenote-number"></label>
+<input type="checkbox" id="sn-sim" class="margin-toggle" />
+<span class="sidenote">The full relation is
+{ A1 ≤ Init',
+A1 ≤ Procc,
+A2 ≤ Init',
+A2 ≤ Procc
+Abort ≤ Abort',
+Abort ≤ Commit',
+Abort ≤ Init'
+Abort ≤ Procc,
+C1 ≤ Init',
+C1 ≤ Procc,
+C12 ≤ Init',
+C12 ≤ Procc,
+C2 ≤ Init',
+C2 ≤ Procc,
+Commit ≤ Abort',
+Commit ≤ Commit',
+Commit ≤ Init',
+Commit ≤ Procc,
+Init ≤ Init',
+Init ≤ Procc }</span></p></section></article></body></html>
