--- a/scribbles/quantifiers.html
+++ b/scribbles/quantifiers.html
@@ -26,9 +26,11 @@ For example, the sequence \( [Init, C_1, A_2, Abort] \) is simulated by \( [Init
 <input type="checkbox" id="sn-demo" class="margin-toggle" />
 <span class="sidenote">The intuition for \( F \) is that it gives us all pairs  \( (P, Q) \) where \( Q \) can simulate  \( P \) <i>for one step</i> and after that one step <i>we end up in a pair of states in \( R \). </i> </span>
 \[ F(R) = \{ (P, Q) | \forall P', P \rightarrow_\mu P' \implies \exists Q', Q \rightarrow_\mu Q' \land (P', Q') \in R \} \]
-<b>Fact 1. </b> \( R \) is a simulation iff \( R \) is a post-fixpoint of \( F \) (i.e. \( R \subseteq F(R) \) ).
+<hr />
+<p><b>Fact 1. </b> \( R \) is a simulation iff \( R \) is a post-fixpoint of \( F \) (i.e. \( R \subseteq F(R) \) ).
 <br />
 <b>Corollary 2. </b> similarity is  F's greatest fixpoint (follows by <a href="https://en.wikipedia.org/wiki/Knaster%E2%80%93Tarski_theorem">Knaster-Tarski</a>).</p>
+<hr /></p>
 <p>Moreover, we can stratify similarity through a family of relations \( \{ \le_n \} \) capturing <i>similarity up to \(n\) steps</i>:
 <ul><li>\( \le_0 = Pr \times Pr \)</li>
 <li> \( \le_{n + 1} = F(\le_n) \)</li></ul></p>
@@ -61,4 +63,9 @@ Commit ≤ Commit',
 Commit ≤ Init',
 Commit ≤ Procc,
 Init ≤ Init',
-Init ≤ Procc }</span></p></section></article></body></html>
+Init ≤ Procc }</span></p>
+<p>Unfortunately the method above doesn't always work. In the example below, \( A \) we can take \( n \) a-steps <i>for any</i> \( n \),
+so \( C \le_n A \) and \( (C, A) \in \bigcap_{ i \ge 0} \le_i \). However, \( A \) <i>cannot</i> simulate \( C \) because \( C \) can take infinitely many steps whereas \( A \) needs to &quot;commit&quot; to
+one of the \( B_i \), and from then on it can only take a finite number of steps. </p>
+<img src="sim-inf.png" style="height:200px" float="left" />
+<img src="sim-n.png" style="height:200px" /></section></article></body></html>
